Fix scrolling z-index for iPhone

--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ a:focus {
 	position: fixed;
 	left: 0;
 	right: 0;
-	z-index: 0;
+	z-index: -1; /* Fix for iPhone scrolling */
 }
 
 .over {
